estandarizacion en el trabajo, cambio de clase conectar a conectar02

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,33 +36,35 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Agencia
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout.jar=C:\\Users\\pc\\Documents\\NetBeansProjects\\AgenciaSystem\\Libs\\AbsoluteLayout.jar
-file.reference.commons-codec-1.13.jar=C:\\Users\\pc\\Documents\\NetBeansProjects\\AgenciaSystem\\Libs\\commons-codec-1.13.jar
-file.reference.commons-dbcp2-2.4.0.jar=C:\\Users\\pc\\Documents\\NetBeansProjects\\AgenciaSystem\\Libs\\commons-dbcp2-2.4.0.jar
-file.reference.commons-dbcp2-2.7.0.jar=C:\\Users\\pc\\Documents\\NetBeansProjects\\AgenciaSystem\\Libs\\commons-dbcp2-2.7.0.jar
-file.reference.commons-logging-1.2.jar=C:\\Users\\pc\\Documents\\NetBeansProjects\\AgenciaSystem\\Libs\\commons-logging-1.2.jar
-file.reference.commons-net-3.8.0.jar=C:\\Users\\pc\\Documents\\NetBeansProjects\\AgenciaSystem\\Libs\\commons-net-3.8.0.jar
-file.reference.commons-pool2-2.8.0.jar=C:\\Users\\pc\\Documents\\NetBeansProjects\\AgenciaSystem\\Libs\\commons-pool2-2.8.0.jar
-file.reference.json.jar=C:\\Users\\pc\\Documents\\NetBeansProjects\\AgenciaSystem\\Libs\\json.jar
-file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\pc\\Documents\\NetBeansProjects\\AgenciaSystem\\Libs\\mysql-connector-java-8.0.29.jar
-file.reference.RSNotify_v1.0.jar=C:\\Users\\pc\\Documents\\NetBeansProjects\\AgenciaSystem\\Libs\\RSNotify v1.0.jar
-file.reference.RSTableMetro.jar=C:\\Users\\pc\\Documents\\NetBeansProjects\\AgenciaSystem\\Libs\\RSTableMetro.jar
+file.reference.AbsoluteLayout.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/AbsoluteLayout.jar
+file.reference.commons-codec-1.13.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/commons-codec-1.13.jar
+file.reference.commons-dbcp2-2.4.0.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/commons-dbcp2-2.4.0.jar
+file.reference.commons-dbcp2-2.7.0.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/commons-dbcp2-2.7.0.jar
+file.reference.commons-logging-1.2.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/commons-logging-1.2.jar
+file.reference.commons-net-3.8.0-sources.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/commons-net-3.8.0-sources.jar
+file.reference.commons-net-3.8.0.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/commons-net-3.8.0.jar
+file.reference.commons-pool2-2.8.0.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/commons-pool2-2.8.0.jar
+file.reference.json.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/json.jar
+file.reference.mysql-connector-java-8.0.29.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/mysql-connector-java-8.0.29.jar
+file.reference.RSNotify_v1.0.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/RSNotify v1.0.jar
+file.reference.RSTableMetro.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/RSTableMetro.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
+    ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.RSNotify_v1.0.jar}:\
     ${file.reference.RSTableMetro.jar}:\
     ${file.reference.commons-codec-1.13.jar}:\
     ${file.reference.commons-dbcp2-2.4.0.jar}:\
     ${file.reference.commons-dbcp2-2.7.0.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.commons-net-3.8.0-sources.jar}:\
+    ${file.reference.commons-net-3.8.0.jar}:\
     ${file.reference.commons-pool2-2.8.0.jar}:\
-    ${file.reference.AbsoluteLayout.jar}:\
-    ${file.reference.mysql-connector-java-8.0.29.jar}:\
     ${file.reference.json.jar}:\
-    ${file.reference.commons-net-3.8.0.jar}
+    ${file.reference.mysql-connector-java-8.0.29.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
