--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/home/franklinp/.netbeans/12.0/build.properties
+user.properties.file=C:\\Users\\Franklin\\AppData\\Roaming\\NetBeans\\19\\build.properties
