--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,23 +36,23 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Agencia
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\AbsoluteLayout.jar
-file.reference.commons-codec-1.13.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\commons-codec-1.13.jar
-file.reference.commons-dbcp2-2.4.0.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\commons-dbcp2-2.4.0.jar
-file.reference.commons-dbcp2-2.7.0.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\commons-dbcp2-2.7.0.jar
-file.reference.commons-logging-1.2.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\commons-logging-1.2.jar
-file.reference.commons-net-3.8.0-sources.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\commons-net-3.8.0-sources.jar
-file.reference.commons-net-3.8.0.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\commons-net-3.8.0.jar
-file.reference.commons-pool2-2.8.0.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\commons-pool2-2.8.0.jar
-file.reference.javax.activation-1.2.0.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\javax.activation-1.2.0.jar
-file.reference.javax.mail.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\javax.mail.jar
-file.reference.json.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\json.jar
-file.reference.lombok.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\lombok.jar
-file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\mysql-connector-java-8.0.29.jar
-file.reference.poi-3.9-20121203.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\poi-3.9-20121203.jar
-file.reference.RSNotify_v1.0.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\RSNotify v1.0.jar
-file.reference.RSTableMetro.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\RSTableMetro.jar
-file.reference.sqlite-jdbc-3.7.2.jar=C:\\Users\\Franklin\\Documents\\AgenciaSystem\\Libs\\sqlite-jdbc-3.7.2.jar
+file.reference.AbsoluteLayout.jar=E:\\Frank\\AG\\Libs\\AbsoluteLayout.jar
+file.reference.commons-codec-1.13.jar=E:\\Frank\\AG\\Libs\\commons-codec-1.13.jar
+file.reference.commons-dbcp2-2.4.0.jar=E:\\Frank\\AG\\Libs\\commons-dbcp2-2.4.0.jar
+file.reference.commons-dbcp2-2.7.0.jar=E:\\Frank\\AG\\Libs\\commons-dbcp2-2.7.0.jar
+file.reference.commons-logging-1.2.jar=E:\\Frank\\AG\\Libs\\commons-logging-1.2.jar
+file.reference.commons-net-3.8.0-sources.jar=E:\\Frank\\AG\\Libs\\commons-net-3.8.0-sources.jar
+file.reference.commons-net-3.8.0.jar=E:\\Frank\\AG\\Libs\\commons-net-3.8.0.jar
+file.reference.commons-pool2-2.8.0.jar=E:\\Frank\\AG\\Libs\\commons-pool2-2.8.0.jar
+file.reference.javax.activation-1.2.0.jar=E:\\Frank\\AG\\Libs\\javax.activation-1.2.0.jar
+file.reference.javax.mail.jar=E:\\Frank\\AG\\Libs\\javax.mail.jar
+file.reference.json.jar=E:\\Frank\\AG\\Libs\\json.jar
+file.reference.lombok.jar=E:\\Frank\\AG\\Libs\\lombok.jar
+file.reference.mysql-connector-java-8.0.29.jar=E:\\Frank\\AG\\Libs\\mysql-connector-java-8.0.29.jar
+file.reference.poi-3.9-20121203.jar=E:\\Frank\\AG\\Libs\\poi-3.9-20121203.jar
+file.reference.RSNotify_v1.0.jar=E:\\Frank\\AG\\Libs\\RSNotify v1.0.jar
+file.reference.RSTableMetro.jar=E:\\Frank\\AG\\Libs\\RSTableMetro.jar
+file.reference.sqlite-jdbc-3.7.2.jar=E:\\Frank\\AG\\Libs\\sqlite-jdbc-3.7.2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -71,10 +71,10 @@ javac.classpath=\
     ${file.reference.javax.activation-1.2.0.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.json.jar}:\
+    ${file.reference.lombok.jar}:\
     ${file.reference.mysql-connector-java-8.0.29.jar}:\
     ${file.reference.poi-3.9-20121203.jar}:\
-    ${file.reference.sqlite-jdbc-3.7.2.jar}:\
-    ${file.reference.lombok.jar}
+    ${file.reference.sqlite-jdbc-3.7.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -138,7 +138,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=-Djava.security.policy=applet.policy
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
