--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,23 +36,24 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Agencia
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout.jar=E:\\Frank\\AG\\Libs\\AbsoluteLayout.jar
-file.reference.commons-codec-1.13.jar=E:\\Frank\\AG\\Libs\\commons-codec-1.13.jar
-file.reference.commons-dbcp2-2.4.0.jar=E:\\Frank\\AG\\Libs\\commons-dbcp2-2.4.0.jar
-file.reference.commons-dbcp2-2.7.0.jar=E:\\Frank\\AG\\Libs\\commons-dbcp2-2.7.0.jar
-file.reference.commons-logging-1.2.jar=E:\\Frank\\AG\\Libs\\commons-logging-1.2.jar
-file.reference.commons-net-3.8.0-sources.jar=E:\\Frank\\AG\\Libs\\commons-net-3.8.0-sources.jar
-file.reference.commons-net-3.8.0.jar=E:\\Frank\\AG\\Libs\\commons-net-3.8.0.jar
-file.reference.commons-pool2-2.8.0.jar=E:\\Frank\\AG\\Libs\\commons-pool2-2.8.0.jar
-file.reference.javax.activation-1.2.0.jar=E:\\Frank\\AG\\Libs\\javax.activation-1.2.0.jar
-file.reference.javax.mail.jar=E:\\Frank\\AG\\Libs\\javax.mail.jar
-file.reference.json.jar=E:\\Frank\\AG\\Libs\\json.jar
-file.reference.lombok.jar=E:\\Frank\\AG\\Libs\\lombok.jar
-file.reference.mysql-connector-java-8.0.29.jar=E:\\Frank\\AG\\Libs\\mysql-connector-java-8.0.29.jar
-file.reference.poi-3.9-20121203.jar=E:\\Frank\\AG\\Libs\\poi-3.9-20121203.jar
-file.reference.RSNotify_v1.0.jar=E:\\Frank\\AG\\Libs\\RSNotify v1.0.jar
-file.reference.RSTableMetro.jar=E:\\Frank\\AG\\Libs\\RSTableMetro.jar
-file.reference.sqlite-jdbc-3.7.2.jar=E:\\Frank\\AG\\Libs\\sqlite-jdbc-3.7.2.jar
+file.reference.AbsoluteLayout.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/AbsoluteLayout.jar
+file.reference.commons-codec-1.13.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/commons-codec-1.13.jar
+file.reference.commons-dbcp2-2.4.0.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/commons-dbcp2-2.4.0.jar
+file.reference.commons-dbcp2-2.7.0.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/commons-dbcp2-2.7.0.jar
+file.reference.commons-logging-1.2.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/commons-logging-1.2.jar
+file.reference.commons-net-3.8.0-sources.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/commons-net-3.8.0-sources.jar
+file.reference.commons-net-3.8.0.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/commons-net-3.8.0.jar
+file.reference.commons-pool2-2.8.0.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/commons-pool2-2.8.0.jar
+file.reference.gson-2.10.1.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/gson-2.10.1.jar
+file.reference.javax.activation-1.2.0.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/javax.activation-1.2.0.jar
+file.reference.javax.mail.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/javax.mail.jar
+file.reference.json.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/json.jar
+file.reference.lombok.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/lombok.jar
+file.reference.mysql-connector-java-8.0.29.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/mysql-connector-java-8.0.29.jar
+file.reference.poi-3.9-20121203.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/poi-3.9-20121203.jar
+file.reference.RSNotify_v1.0.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/RSNotify v1.0.jar
+file.reference.RSTableMetro.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/RSTableMetro.jar
+file.reference.sqlite-jdbc-3.7.2.jar=/home/franklinp/Escritorio/Gesti\u00f3n Franklin Parra/1. Actividades/01. En curso/AG/Libs/sqlite-jdbc-3.7.2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -68,6 +69,7 @@ javac.classpath=\
     ${file.reference.commons-net-3.8.0-sources.jar}:\
     ${file.reference.commons-net-3.8.0.jar}:\
     ${file.reference.commons-pool2-2.8.0.jar}:\
+    ${file.reference.gson-2.10.1.jar}:\
     ${file.reference.javax.activation-1.2.0.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.json.jar}:\
@@ -131,7 +133,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=C__Program_Files_Java_jdk-1.8
+platform.active=JDK_8__System_
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
